funcionalidad corregida: listar usuarios ajenos para añadirlos a un grupo